feat: partially integrated environment database and validation
